# page-rank

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
scripts/: build.sh
src/: camera.cpp  camera.h  glad.c  graph.cpp  graph.h  main.cpp  node.cpp  node.h  universe.cpp  universe.h  walker.cpp  walker.h
src/utils/: rgb.cpp  rgb.h  vec3d.cpp  vec3d.h
src/utils/draw/: line.cpp  line.h  solid_sphere.cpp  solid_sphere.h
